# mint-dapp

./: .gitignore  package.json  tsconfig.json  vite.config.ts
components/: utils.tsx
components/layout/: Header.tsx  MintDetails.tsx  MintInfo.tsx  SocialNetworks.tsx
components/providers/: MetaplexProvider.tsx  WalletsProvider.tsx  useMetaplex.tsx
components/raffles/: BuyTickets.tsx  Countdown.tsx  Raffle.tsx
config/: allowList.ts  candyMachine.ts  commands.ts  config.ts  projectInfo.ts  socialNetworks.ts
raffle-contract/: .gitignore  Anchor.toml  package.json
raffle-contract/programs/raffle-contract/: Cargo.toml
raffle-contract/programs/raffle-contract/src/: instructions.rs  lib.rs  utils.rs
raffle-contract/programs/raffle-contract/src/instructions/: buy_tickets.rs  create_raffle.rs  reveal_winners.rs
raffle-contract/programs/raffle-contract/src/utils/: randomness_tools.rs  recent_blockhashes.rs
raffle-contract/tests/: raffle-contract.ts
raffle/hidden/: hidden.json
src/: App.css  App.tsx  main.tsx  vite-env.d.ts
