[package]
name = "raffle-contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "raffle_contract"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
anchor-spl = "0.27.0"
# https://www.anchor-lang.com/docs/release-notes#breaking 0.27.0
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"]}